# elektra_usability_gen

./: CMakeLists.txt  README  genopt.c  genopt.h  gitCommit.sh  specification.ini  test.sh  wc.c  wc.h  wc_reset.c
